fixed footer overlaying card, facebook send button being cut off, and color on card page links

--- a/app/assets/stylesheets/partials/_cards.css.scss
+++ b/app/assets/stylesheets/partials/_cards.css.scss
@@ -60,6 +60,9 @@ p.qr-link-label {
 	}
 }
 .social {
+	.ui-link {
+		color: #333333 !important;
+	}
   .your-qr-code {display:none;}
   .copy-odd {
     background-color: #F8F8F8;
